@@ -8,7 +8,7 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 long long
 mod (long long a, long long b)
 {
@@ -19,7 +19,7 @@ mod (long long a, long long b)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
   ASSERT (mod (1LL, 2LL) == 1);
 #endif
 }
