@@ -16,7 +16,7 @@ long long c=2863311530LL,c3=2863311530LL*3;
 void
 testTortureExecute (void)
 {
-#if !defined (__SDCC_ds390) && !defined (__SDCC_hc08) && !defined (__SDCC_s08)
+#if !defined (__SDCC_hc08) && !defined (__SDCC_s08)
   if(c*3!=c3)
     ASSERT(0);
   return;
