@@ -8,7 +8,7 @@
 #pragma std_c99
 #endif
 
-#if !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
+#if !defined(__SDCC_pic14) && !defined(__SDCC_pic16)
 int
 g (unsigned long long int *v, int n, unsigned int a[], int b)
 {
@@ -23,7 +23,7 @@ g (unsigned long long int *v, int n, unsigned int a[], int b)
 void
 testTortureExecute (void)
 {
-#if !defined(__SDCC_mcs51) && !defined(__SDCC_ds390) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined (__SDCC_s08) 
+#if !defined(__SDCC_mcs51) && !defined(__SDCC_pic14) && !defined(__SDCC_pic16) && !defined(__SDCC_hc08) && !defined (__SDCC_s08) 
   int res;
   unsigned int ar[] = { 10, 11, 12, 13, 14 };
   unsigned long long int v;
